# AutoLens

./: 0_hello_deeplens.py  1_autolens.py  2_lens_optim.py  404.html  LICENSE  README.md  environment.yml  index.html  objects.inv  pyproject.toml  sitemap.xml
api/geolens/: index.html
api/imgsim/: index.html
api/losses/: index.html
api/materials/: index.html
api/ray/: index.html
api/surfaces/: index.html
architecture/: index.html
configs/: autolens.yml
contributing/: index.html
datasets/lens_zoo/: test_camera_aspheric.json
deeplens/: README.md  __init__.py  config.py  diff_ops.py  geolens.py  lens.py  loss.py  ray.py  utils_deeplens.py
deeplens/geolens_pkg/: README.md  eval.py  eval_seidel.py  eval_tolerance.py  io.py  optim.py  optim_2nd.py  optim_init.py  optim_ops.py  paraxial.py  psf_compute.py  vis.py  vis3d.py
deeplens/geometric_surface/: aspheric.py  base.py  spheric.py
deeplens/material/: materials.py  materials_data.json
deeplens/phase_surface/: binary2.py  phase.py
examples/: index.html
installation/: index.html
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test_binary2phase.py  test_config.py  test_geolens_eval.py  test_geolens_io.py  test_geolens_optim.py  test_geolens_psf.py  test_geolens_trace.py  test_integration.py  test_loss.py  test_material.py  test_ray.py  test_surfaces.py  test_utils.py
