[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autolens"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "scipy",
    "Pillow",
    "tqdm",
    "PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deeplens*"]
